Fix design issue
Last project element in last row was always larger than rest because of
extra margin that others had and he did not have

--- a/style.css
+++ b/style.css
@@ -100,10 +100,6 @@ main > h1 {
     scale: 1.02;
 }
 
-.project:not(:last-child) {
-    margin-bottom: 16px;
-}
-
 .project-header {
     display: flex;
     justify-content: space-between;
